--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -5,8 +5,9 @@
   {% if g.user %}
     <a class="action" href="{{ url_for('blog.create') }}">New</a>
   {% endif %}
+{% endblock %}
 
-{% blcok content %}
+{% block content %}
   {% for post in posts %}
     <article class="post">
       <header>
