--- a/flaskr/templates/task/index.html
+++ b/flaskr/templates/task/index.html
@@ -16,10 +16,10 @@
           <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}></div>
         </div>
         {% if g.user['id'] == post['author_id'] %}
-          <!-- <a class="action" href="{{ url_for('task.update', id=task['id']) }}">Edit</a> -->
+          <a class="action" href="{{ url_for('task.update', id=task['id']) }}">Edit</a>
         {% endif %}
       </header>
-      <!-- <p class="body">{{ task['description'] }}</p> -->
+      <p class="body">{{ task['description'] }}</p>
     </article>
     {% if not loop.last %}
       <hr>
