--- a/flaskr/templates/task/update.html
+++ b/flaskr/templates/task/update.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <!-- <h1>{% block title %}Edit "{{ task['name'] }}"{% endblock %}</h1> -->
+  <h1>{% block title %}Edit "{{ task['name'] }}"{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
@@ -14,7 +14,7 @@
     <input type="submit" value="Save">
   </form>
   <hr>
-  <!-- <form action="{{ url_for('task.delete', id=task['id'])) }}" method="post">
+  <form action="{{ url_for('task.delete', id=task['id'])) }}" method="post">
     <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
-  </form> -->
+  </form>
 {% endblock %}
