--- a/flaskr/templates/task/index.html
+++ b/flaskr/templates/task/index.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Posts{% endblock %}</h1>
+  <h1>{% block title %}Tasks{% endblock %}</h1>
   {% if g.user %}
-    <!-- <a class="action" href="{{ url_for('task.create') }}">New</a> -->
+    <a class="action" href="{{ url_for('task.create') }}">New</a>
   {% endif %}
 {% endblock %}
 
@@ -12,10 +12,10 @@
     <article class="blog">
       <header>
         <div>
-          <h1>{{ post['title'] }}</h1>
-          <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}></div>
+          <h1>{{ task['name'] }}</h1>
+          <div class="about">by {{ task['username'] }} on {{ task['created'].strftime('%Y-%m-%d') }}></div>
         </div>
-        {% if g.user['id'] == post['author_id'] %}
+        {% if g.user['id'] == task['user_id'] %}
           <a class="action" href="{{ url_for('task.update', id=task['id']) }}">Edit</a>
         {% endif %}
       </header>
