tasks now displaying

--- a/flaskr/templates/task/index.html
+++ b/flaskr/templates/task/index.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block content %}
-  {% for post in posts %}
+  {% for task in tasks %}
     <article class="blog">
       <header>
         <div>
