--- a/flaskr/templates/task/update.html
+++ b/flaskr/templates/task/update.html
@@ -9,12 +9,14 @@
     <label for="name">Name</label>
     <input name="name" id="name"
       value="{{ request.form['name'] or task['name'] }}" required>
-    <label for="body">Body</label>
-    <textarea name="body" id="body">{{ request.form['description'] or task['description'] }}</textarea>
+    <label for="description">Description</label>
+    <textarea name="description" id="description">{{ request.form['description'] or task['description'] }}</textarea>
+    <label for ="priority">Priority</label>
+    <input name="priority" id="priority" required>
     <input type="submit" value="Save">
   </form>
   <hr>
-  <form action="{{ url_for('task.delete', id=task['id'])) }}" method="post">
+  <form action="{{ url_for('task.delete', id=task['id']) }}" method="post">
     <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
   </form>
 {% endblock %}
