--- a/flaskr/templates/task/update.html
+++ b/flaskr/templates/task/update.html
@@ -16,6 +16,9 @@
     <input type="submit" value="Save">
   </form>
   <hr>
+  <form action="{{ url_for('task.index') }}" method="get">
+    <input class="primary" type="submit" value="Cancel" onclick="return confirm('Are you sure?');">
+  </form>
   <form action="{{ url_for('task.delete', id=task['id']) }}" method="post">
     <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
   </form>
