--- a/flaskr/templates/task/create.html
+++ b/flaskr/templates/task/create.html
@@ -11,7 +11,12 @@
     <label for="description">Description</label>
     <textarea name="description" id="description">{{ request.form['description'] }}</textarea>
     <label for ="priority">Priority</label>
-    <input name="priority" id="priority" required>
+    <input type="radio" name="priority" id="high" value="1">
+    <label for="high">High</label><br>
+    <input type="radio" name="priority" id="medium" value="2">
+    <label for="medium">Medium</label><br>
+    <input type="radio" name="priority" id="low" value="3">
+    <label for="low">Low</label><br>
     <input type="submit" value="Save">
   </form>
   <form action="{{ url_for('task.index') }}" method="get">
