--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -12,7 +12,7 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: serif;
-  color: #377ba8;
+  color: black;
   margin: 1rem 0;
 }
 
@@ -26,10 +26,12 @@ hr {
 }
 
 nav {
-  background: lightgray;
+  background: #f56358;
+  color: white;
   display: flex;
   align-items: center;
-  padding: 0 0.5rem;
+  /* padding: 0 0.5rem; */
+  padding: 2%;
 }
 
 nav h1 {
@@ -74,6 +76,17 @@ nav ul li a, nav ul li span, header .action {
   padding: 1em;
   background: #cae6f6;
   border: 1px solid #377ba8;
+}
+
+.task {
+  background: #d3d3d3;
+  padding: 2%;
+  border-radius: 5%;
+}
+
+.task-bucket {
+  background: #fc483a;
+  color: white;
 }
 
 .post > header {
