--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
 html {
-  font-family: sans-serif;
+  font-family: 'Montserrat', sans-serif;
   background: #eee;
   padding: 1rem;
 }
@@ -10,14 +12,9 @@ body {
   background: white;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: serif;
+h2, h4, h5, h6 {
   color: black;
   margin: 1rem 0;
-}
-
-a {
-  color: #377ba8;
 }
 
 hr {
@@ -26,22 +23,24 @@ hr {
 }
 
 nav {
-  background: #f56358;
+  background: #0275D8;
   color: white;
   display: flex;
   align-items: center;
-  /* padding: 0 0.5rem; */
   padding: 2%;
+  border-radius: 10px;
 }
 
 nav h1 {
   flex: auto;
   margin: 0;
+  color: white;
 }
 
 nav h1 a {
   text-decoration: none;
   padding: 0.25rem 0.5rem;
+  color: white;
 }
 
 nav ul  {
@@ -54,10 +53,12 @@ nav ul  {
 nav ul li a, nav ul li span, header .action {
   display: block;
   padding: 0.5rem;
+  color: white;
 }
 
-.content {
+section.content {
   padding: 0 1rem 1rem;
+  border-radius: 10px;
 }
 
 .content > header {
@@ -79,13 +80,14 @@ nav ul li a, nav ul li span, header .action {
 }
 
 .task {
-  background: #d3d3d3;
   padding: 2%;
-  border-radius: 5%;
+  border-radius: 10px;
+  background: #0275D8;
+  color: white;
 }
 
 .task-bucket {
-  background: #fc483a;
+  background: #005B8F;
   color: white;
 }
 
@@ -138,7 +140,7 @@ nav ul li a, nav ul li span, header .action {
 }
 
 input.danger {
-  color: #cc2f2e;
+  color: #D9534F;
 }
 
 input[type=submit] {
