--- a/flaskr/static/style.css
+++ b/flaskr/static/style.css
@@ -10,6 +10,7 @@ body {
   max-width: 960px;
   margin: 0 auto;
   background: white;
+  border-radius: 10px;
 }
 
 h2, h4, h5, h6 {
@@ -22,6 +23,7 @@ hr {
   border-top: 1px solid lightgray;
 }
 
+/* Nav Bar Section */
 nav {
   background: #0275D8;
   color: white;
@@ -55,7 +57,9 @@ nav ul li a, nav ul li span, header .action {
   padding: 0.5rem;
   color: white;
 }
+/* End Nav Bar Section */
 
+/* Content Section  */
 section.content {
   padding: 0 1rem 1rem;
   border-radius: 10px;
@@ -70,53 +74,6 @@ section.content {
 .content > header h1 {
   flex: auto;
   margin: 1rem 0 0.25rem 0;
-}
-
-.flash {
-  margin: 1em 0;
-  padding: 1em;
-  background: #cae6f6;
-  border: 1px solid #377ba8;
-}
-
-.task {
-  padding: 2%;
-  border-radius: 10px;
-  background: #0275D8;
-  color: white;
-}
-
-.task-bucket {
-  background: #005B8F;
-  color: white;
-}
-
-.post > header {
-  display: flex;
-  align-items: flex-end;
-  font-size: 0.85em;
-}
-
-.post > header > div:first-of-type {
-  flex: auto;
-}
-
-.post > header h1 {
-  font-size: 1.5em;
-  margin-bottom: 0;
-}
-
-.post .about {
-  color: slategray;
-  font-style: italic;
-}
-
-.post .body {
-  white-space: pre-line;
-}
-
-.content:last-child {
-  margin-bottom: 0;
 }
 
 .content form {
@@ -137,6 +94,26 @@ section.content {
 .content textarea {
   min-height: 12em;
   resize: vertical;
+}
+
+.content:last-child {
+  margin-bottom: 0;
+}
+/* End Content Section  */
+
+.flash {
+  margin: 1em 0;
+  padding: 1em;
+  background: #cae6f6;
+  border: 1px solid #377ba8;
+}
+
+.task {
+  padding: 2%;
+  margin: 2%;
+  border-radius: 10px;
+  background: #0275D8;
+  color: white;
 }
 
 a.action {
