--- a/flaskr/templates/landing/index.html
+++ b/flaskr/templates/landing/index.html
@@ -5,6 +5,8 @@
 {% endblock %}
 
 {% block content %}
-  <a class="action" href="{{ url_for('task.index') }}">Tasks</a>
+  <article class="task">
+    <a class="action" href="{{ url_for('task.index') }}">View All Tasks</a>
+  </article>
 {% endblock %} -->
  
