check if user is logged on before displaying tasks

--- a/flaskr/templates/landing/index.html
+++ b/flaskr/templates/landing/index.html
@@ -5,8 +5,10 @@
 {% endblock %}
 
 {% block content %}
-  <article class="task">
-    <a class="action" href="{{ url_for('task.index') }}">View All Tasks</a>
-  </article>
+  {% if g.user %}
+    <article class="task">
+      <a class="action" href="{{ url_for('task.index') }}">View All Tasks</a>
+    </article>
+  {% endif %}
 {% endblock %} -->
  
