--- a/flaskr/templates/task/index.html
+++ b/flaskr/templates/task/index.html
@@ -25,8 +25,8 @@
       <article class="task">
         <header>
           {% if g.user['id'] == task['user_id'] %}
-            <div class="task-row" style="display: flex; ">
-              <h1 style="float: left;">{{ task['name'] }}</h1>
+            <div class="task-row">
+              <h1 style="flex: auto;">{{ task['name'] }}</h1>
               <div class="button-group">
                 <button class="task-button">
                   <form action="{{ url_for('task.update', id=task['id']) }}" method="get">
