--- a/flaskr/templates/task/create.html
+++ b/flaskr/templates/task/create.html
@@ -30,8 +30,8 @@
   <!-- Save/Cancel Buttons -->
   <form action="{{ url_for('task.index') }}" method="get">
     <div>
-      <input type="submit" value="Cancel" onclick="return confirm('Are you sure?');">
-      <input type="submit" value="Save">
+      <input class="blue-button" type="submit" value="Cancel" onclick="return confirm('Are you sure?');">
+      <input class="blue-button" type="submit" value="Save">
     </div>
   </form>
 {% endblock %}
