--- a/flaskr/templates/task/index.html
+++ b/flaskr/templates/task/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}Task Viewer {% endblock %}
+
 {% block header %}
   {% if g.user %}
     <div style="display: flex;">
@@ -30,25 +31,15 @@
           {% if g.user['id'] == task['user_id'] %}
             <div class="task-row">
               <p style="flex: auto;">{{ task['name'] }}</p>
-                <button class="task-button">
-                  <form action="{{ url_for('task.update', id=task['id']) }}" method="get">
-                    <input style="border: none; background: white;" type="submit" value="Edit">
-                  </form>
-                </button>
-                <button class="task-button">
-                  <form action="{{ url_for('task.details', id=task['id']) }}" method="get">
-                    <input style="border: none; background: white;" type="submit" value="Details">
-                  </form>
-                </button>           
-                <!-- <button class="task-button"> -->
-                
-                  <form action="{{ url_for('task.delete', id=task['id']) }}" method="post">
-                    <button class="task-button danger" type="submit">
-                      Delete
-                    </button>
-                    <!-- <input style="border: none; background: white;" class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');"> -->
-                  </form>
-                <!-- </button> -->
+                <form action="{{ url_for('task.update', id=task['id']) }}" method="get">
+                  <button class="task-button" type="submit">Update</button>
+                </form>
+                <form action="{{ url_for('task.details', id=task['id']) }}" method="get">
+                  <button class="task-button" type="submit">Details</button>
+                </form>         
+                <form action="{{ url_for('task.delete', id=task['id']) }}" method="post">
+                  <button class="task-button danger" type="submit">Delete</button>
+                </form>
             </div>
           {% endif %}
         </header>
