--- a/flaskr/templates/task/create.html
+++ b/flaskr/templates/task/create.html
@@ -26,12 +26,20 @@
     <div>
       <input type="date" id="scheduled" name="scheduled">
     </div>
+
+    <form action="{{ url_for('task.create') }}" method="post">
+      <input class="blue-button" type="submit" value="Save">
+    </form>
   </form>
+
+  
+
   <!-- Save/Cancel Buttons -->
   <form action="{{ url_for('task.index') }}" method="get">
     <div>
-      <input class="blue-button" type="submit" value="Cancel" onclick="return confirm('Are you sure?');">
-      <input class="blue-button" type="submit" value="Save">
+      <form action="{{ url_for('task.index') }}" method="get">
+        <input class="blue-button" type="submit" value="Cancel" onclick="return confirm('Are you sure?');">
+      </form>
+      
     </div>
-  </form>
 {% endblock %}
